# lupin_artifact

./: .gitignore  AGENTS.md
.github/workflows/: ci.yml
driver/: .clangd  .gitignore  Makefile  Makefile.ext
driver/src/: alloc_impl.h  bitset.c  bitset.h  buddy_alloc.c  buddy_alloc.h  circular_queue.c  circular_queue.h  common_macro.h  cxl_alloc.c  cxl_alloc.h  cxl_cgroup.c  cxl_cgroup.h  cxl_dev.h  cxl_futex.h  cxl_futex_waitwake.c  cxl_ivpci.c  fault_inject.h  ftrace_helper.c  ftrace_helper.h  hash_index.c  hash_index.h  jj_ab_spin  list_queue.c  list_queue.h  log.c  log.h  mpsc_queue.c  mpsc_queue.h  obj_header.c  obj_header.h  output_cacheline.h  proc_death.c  proc_death.h  proc_death_netlink.c  proc_death_netlink.h  process_id.h  random_bytes.c  shmem_obj.h  shmem_ops.c  shmem_ops.h  (+8 more)
driver/src/page_table/: addr.h  page_table.h
driver/src/tests/: .gitignore  Taskfile.yml  test_calc_obj_aloc_recs_from_hdr.c
driver/src/tests/offset_size/: Makefile  kern.c  print_offset_size.h  test_offset_size.c
driver/src/uapi/: cxl_cgroup_udef.h  vcxl_proc_death_notify.h  vcxl_shm.h  vcxl_udef.h
lupin_lock_benchmark/: .Taskfile.yml.swp  CMakeLists.txt  Taskfile.yml  atomics.h  common_def.h  cxl_setup.hpp  cxl_test_jj.cpp  cxl_test_jj_32port.cpp  cxl_test_lpttas.cpp  cxl_test_qspin.cpp  cxl_test_rmcs.cpp  cxl_test_ttas.cpp  dram_test_jj.cpp  dram_test_jj_32port.cpp  dram_test_lpttas.cpp  dram_test_osq.cpp  dram_test_qspin.cpp  dram_test_rmcs.cpp  dram_test_ttas.cpp  rmcs.hpp  thread_helper.hpp  ttas.h
lupin_lock_benchmark/linux/: osq_lock.h  queued_spinlock.h
lupin_lock_benchmark/linux/include/: lk_atomics.h  lk_cmpxchg.h
lupin_lock_benchmark/tatas_align/: tatas_spin.h  tatas_spinlock.h  tatas_spinlock_kern.h
src/buddy/: CMakeLists.txt  bitset.c
src/buddy/include/: bitset.h  buddy_alloc.h  slab.h
src/buddy/tests/: tests_buddy.c
src/common/: atomic_bitset.h  atomic_int_op.h  common_macro.h  load_and_flush.h  output_cacheline.h  persist_cas.h  random_bytes.c  random_bytes.h  shmem_obj.h  spinlock.h  spinlock_kern_macro.h  spinlock_kern_name.h  template.h  util_checksum.c  util_checksum.h
src/common/jj_ab_spin/: jj_ab_16port_spinlock.c  jj_ab_64port_spinlock.c  jj_ab_cs_status.h  jj_ab_spinlock_16proc.c  jj_ab_spinlock_32proc.c  jj_ab_spinlock_64proc.c  jj_ab_wport_css_status.h  jj_ab_wport_spin.h  jj_ab_wport_spinlock.h  jj_ab_wport_spinlock_kern.h  jj_abortable_spin.h  jj_abortable_spinlock.h  jj_abortable_spinlock_kern.h
src/common/min_array/: binary_tree_array.h  min_array.h  process_state.h
src/common/tatas/: tatas_spin.h  tatas_spinlock.h  tatas_spinlock_kern.h
src/common_cpp/: crash_here.hpp  cxlalloc.hpp
src/kernel_allocator_bench/: CMakeLists.txt  allocator_bench.cpp
src/libshmemcpy/: CMakeLists.txt
src/libshmemcpy/rust_api/: Cargo.toml  build.rs
src/libshmemcpy/rust_api/src/: lib.rs  shmemcpy.rs
src/libshmemcpy/src/: api.c  memops_generic.c
src/libshmemcpy/src/include/: shmemcpy_api.h  shmemcpy_arch_api.h
src/libshmemcpy/src/include/internal/: shmemcpy_api_internal.h
src/libshmemcpy/src/test/memcpy/: memcpy_common.c  memcpy_common.h  shmem_memcpy.c  tests.py
src/libshmemcpy/src/test/memmove/: memmove_common.c  memmove_common.h  shmem_memmove.c  tests.py
src/libshmemcpy/src/test/memset/: memset_common.c  memset_common.h  shmem_memset.c  tests.py
src/libshmemcpy/src/test/movnt/: shmem_movnt.c  tests.py
src/libshmemcpy/src/test/movnt_align/: movnt_align_common.c  movnt_align_common.h  shmem_movnt_align.c  tests.py
src/libshmemcpy/src/test/unittest/: run_command.py  unittest.h  ut.c  ut_alloc.c  ut_backtrace.c  ut_file.c
src/libshmemcpy/src/x86_64/: flush.h  init.c  memcpy_memset.h
src/libshmemcpy/src/x86_64/memcpy/: memcpy_avx.h  memcpy_nt_avx.c  memcpy_nt_avx512f.c  memcpy_nt_movdir64b.c  memcpy_nt_sse2.c  memcpy_sse2.h  memcpy_t_avx.c  memcpy_t_avx512f.c  memcpy_t_sse2.c
src/libshmemcpy/src/x86_64/memset/: memset_avx.h  memset_nt_avx.c  memset_nt_avx512f.c  memset_nt_movdir64b.c  memset_nt_sse2.c  memset_sse2.h  memset_t_avx.c  memset_t_avx512f.c  memset_t_sse2.c
vm_lib/: start_vm.py
